# GuitarSynthesizer

./: README.md  pyproject.toml
src/digitar/: temporal.py
